# multi-pinhole

./: .gitignore  CHANGELOG.md  IP_sim.py  MST_2025_SXR_imaging.py  README.md  Readme.md  calc.py  conditional.py  config_sample.json  example.py  pinhole.py  pyproject.toml  requirements.txt  shooting.py
benchmarks/: README.md  __init__.py  benchmark_partial_visibility.py  benchmark_projection.py  evaluate_adaptive_threshold_sweep.py  evaluate_mst_adaptive_resolution.py  evaluate_projection_column_compression.py  evaluate_subvoxel_psf_compression.py  evaluate_subvoxel_resolution.py  profile_wall_visibility.py
doc/: core.md  overview.md  utilities.md  world.md
docs/: core.md  gui.md  overview.md  utilities.md  world.md
docs/ja/: core.md  overview.md  projection-compression-future.md  projection-roadmap.md  utilities.md  world.md
examples/: MST_2025_SXR_imaging.py  benchmark_projection.py  evaluate_adaptive_cap.py  evaluate_adaptive_projection.py  evaluate_adaptive_source_resolution.py  evaluate_adaptive_threshold_sweep.py  evaluate_mst_adaptive_resolution.py  evaluate_partial_resolution.py  evaluate_projection_column_compression.py  evaluate_small_voxel_depth_sweep.py  evaluate_subvoxel_psf_compression.py  evaluate_subvoxel_resolution.py  example.py  profiles_demo.py  small_voxel_projection.py  verify_1d_analytic_projection.py  verify_aperture_blocking.py  verify_etendue_x_scan.py
examples/mst/: MST_2025_SXR_imaging.py  MST_wall-mesh.stl  README.md
examples/relax/: README.md  RELAX_multi_pinhole_imaging.py
multi_pinhole/: __about__.py  __init__.py  _projection_matrix.py  _visibility.py  aperture.py  camera.py  coordinates.py  core.py  eye.py  interpolation.py  plasma.py  profiles.py  projection.py  rays.py  screen.py  test.py  voxel.py  world.py
multi_pinhole/data/: relax_rotated.stl
multi_pinhole/gui/: __init__.py  app.py  model.py  vtk_scene.py
multi_pinhole/utils/: __init__.py  filter.py  fourier_bessel.py  my_stdio.py  plot.py  stl_utils.py
tests/: test_basic_api.py  test_center_interpolator.py  test_coordinate_conversion.py  test_core_decomposition.py  test_documentation_contract.py  test_gui_app.py  test_gui_model.py  test_mst_workflow.py  test_profiles.py  test_projection_binning.py  test_projection_matrix_decomposition.py  test_psf_compression_example.py  test_release_v080.py  test_stl_utils_visibility.py  test_visibility_decomposition.py
utils/: __init__.py  filter.py  my_stdio.py  plot.py  stl_utils.py
utils/pyx/: intersection.pyx
