[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "multi-pinhole"
dynamic = ["version"]
description = "Multi-pinhole imaging simulation code"
readme = "Readme.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Shinichiro Inagaki", email = "inagaki.shinichiro.7z@kyoto-u.ac.jp" }
]

dependencies = [
    "numpy>=2.3.4",
    "numpy-stl>=3.2.0",
    "scipy>=1.16.3",
    "plotly>=6.4.0",
    "matplotlib>=3.10.7",
    "tqdm>=4.67.1",
    "dill>=0.4.0"
]

[tool.setuptools.dynamic]
version = { attr = "multi_pinhole.__about__.__version__" }


[tool.setuptools.packages.find]
where = ["."]
include = ["multi_pinhole", "utils"]

[project.scripts]
multi-pinhole-sim = "multi_pinhole:cli"