[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "multi-pinhole"
dynamic = ["version"]
description = "Multi-pinhole imaging simulation code"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Shinichiro Inagaki", email = "inagaki.shinichiro.7z@kyoto-u.ac.jp" }
]

dependencies = [
    "numpy>=1.23",
    "numpy-stl>=3.0",
    "scipy>=1.9",
    "plotly>=5.0",
    "matplotlib>=3.5",
    "tqdm>=4.64",
    "dill>=0.3.6",
    "numba>=0.58"
]

[tool.setuptools.dynamic]
version = { attr = "multi_pinhole.__about__.__version__" }


[tool.setuptools.packages.find]
where = ["."]
include = ["multi_pinhole*"]

[tool.setuptools.package-data]
multi_pinhole = ["data/*.stl"]

[project.scripts]
multi-pinhole-sim = "multi_pinhole:cli"
